--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,52 +17,67 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
-    
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[test,dev]"
-    
-    - name: Check formatting with Ruff
+        pip install -e ".[dev,test]"
+        pip install pytest-cov pytest-asyncio bandit safety
+        
+    - name: Run linters and formatters
       run: |
-        ruff format --check .
+        pip install black isort mypy ruff
+        black --check .
+        isort --check-only .
+        mypy src tests
         ruff check .
-    
-    - name: Run tests with pytest
+        
+    - name: Security checks
       run: |
-        pytest --cov=src --cov-report=xml
-    
+        bandit -r src/
+        safety check
+        
+    - name: Run tests with coverage
+      run: |
+        pytest --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=90
+        
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
         fail_ci_if_error: true
 
-  type-check:
+  integration-tests:
+    needs: test
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
-        cache: 'pip'
-    
+        python-version: "3.11"
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-    
-    - name: Type check with mypy
-      run: mypy src/ tests/
+        pip install -e ".[dev,test]"
+        pip install pytest-asyncio
+        
+    - name: Run integration tests
+      env:
+        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+      run: |
+        pytest tests/ -m "integration" -v
 
-  security:
+  security-scan:
+    needs: test
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v4
     
@@ -71,4 +86,46 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        command: monitor 
+        command: monitor
+        
+    - name: Run OWASP Dependency Check
+      uses: dependency-check/Dependency-Check_Action@main
+      with:
+        project: 'cylestio-monitor'
+        path: '.'
+        format: 'HTML'
+        
+    - name: Upload dependency check report
+      uses: actions/upload-artifact@v3
+      with:
+        name: dependency-check-report
+        path: reports
+
+  deploy:
+    needs: [test, integration-tests, security-scan]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build twine
+        
+    - name: Build package
+      run: python -m build
+      
+    - name: Publish to PyPI
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      run: |
+        twine check dist/*
+        twine upload dist/* 
