--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,76 +5,119 @@ build-backend = "hatchling.build"
 [project]
 name = "cylestio-monitor"
 version = "0.1.0"
-description = "A powerful open-source monitoring solution for AI agents"
-authors = [
-    {name = "Cylestio Team", email = "support@cylestio.com"},
-]
-dependencies = [
-    "anthropic>=0.18.1",
-    "pydantic>=2.6.1",
-    "httpx>=0.26.0",
-    "fastapi>=0.109.2",
-    "uvicorn>=0.27.1",
-]
-requires-python = ">=3.11"
+description = "A monitoring tool for LLM API calls"
 readme = "README.md"
-license = {text = "MIT"}
+requires-python = ">=3.11"
+license = "MIT"
+keywords = ["llm", "monitoring", "api"]
+authors = [
+    { name = "Cylest.io", email = "contact@cylest.io" }
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+
+packages = [
+    { include = "cylestio_monitor", from = "src" }
+]
+
+dependencies = [
+    "anthropic>=0.18.0",
+    "mcp>=1.3.0",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.0.0",
+    "structlog>=24.1.0",
+]
 
 [project.optional-dependencies]
-test = [
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.5",
-    "pytest-cov>=4.1.0",
-    "pytest-github-actions-annotate-failures>=0.2.0",
-    "httpx>=0.26.0",
-]
-security = [
-    "bandit>=1.7.7",
-    "safety>=2.3.5",
-    "pip-audit>=2.7.2",
-    "ruff>=0.2.1",
-    "semgrep>=1.55.1",
-    "detect-secrets>=1.4.0",
-]
 dev = [
-    "black>=24.1.1",
-    "isort>=5.13.2",
+    "black>=24.2.0",
+    "isort>=5.13.0",
     "mypy>=1.8.0",
+    "ruff>=0.3.0",
     "pre-commit>=3.6.0",
 ]
-
-[tool.pytest.ini_options]
-minversion = "8.0"
-addopts = "-ra -q --cov=cylestio_monitor --cov-report=xml --cov-report=term-missing"
-testpaths = [
-    "tests",
+test = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+    "coverage>=7.4.0",
 ]
-asyncio_mode = "auto"
+security = [
+    "bandit>=1.7.0",
+    "safety>=3.0.0",
+]
 
 [tool.black]
 line-length = 100
-target-version = ['py311']
-include = '\.pyi?$'
+target-version = ["py311"]
 
 [tool.isort]
 profile = "black"
-multi_line_output = 3
 line_length = 100
+multi_line_output = 3
 
 [tool.mypy]
 python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+disallow_incomplete_defs = true
 check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+
+[tool.pytest.ini_options]
+minversion = "8.0"
+addopts = "-ra -q --cov=src --cov-report=xml --cov-report=term-missing"
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+markers = [
+    "integration: marks tests as integration tests",
+    "security: marks tests that verify security requirements",
+]
+
+[tool.coverage.run]
+branch = true
+source = ["src"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "pass",
+    "raise ImportError",
+]
 
 [tool.ruff]
-select = ["E", "F", "B", "S"]
-ignore = []
 line-length = 100
 target-version = "py311"
-fix = true
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "C",   # flake8-comprehensions
+    "B",   # flake8-bugbear
+    "S",   # flake8-bandit
+]
+ignore = []
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101"]  # Allow assert in tests
 
 [tool.bandit]
-exclude_dirs = ["tests", "examples"]
-skips = ["B101"]
+exclude_dirs = ["tests"]
+skips = ["B101"]  # Skip assert warnings in tests
