--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,43 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
-      - id: detect-private-key        # Prevent committing private keys
-      - id: debug-statements          # Prevent debug statements
-      - id: check-yaml               # Validate YAML files
-      - id: check-toml              # Validate TOML files
-      - id: check-added-large-files  # Prevent large files
-      - id: check-ast               # Validate Python syntax
-      - id: check-case-conflict     # Check for case conflicts
-      - id: check-merge-conflict    # Check for merge conflicts
+      - id: detect-private-key        # Prevent committing private keys (critical for SOC2/HIPAA)
+      - id: check-added-large-files   # Prevent large files that might contain sensitive data
+      - id: check-yaml                # Validate YAML files
+      - id: check-toml                # Validate TOML files
+      - id: check-merge-conflict      # Check for merge conflicts
+      # Removed less critical checks to speed up the process
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.0
+    rev: v0.9.10
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [--select=S,B,I,E,F, --fix]  # Focus on security (S) and bugs (B)
         files: \.py$
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.7
+    rev: 1.8.3
     hooks:
       - id: bandit
-        args: ["-c", "pyproject.toml", "-r", "src"]
+        args: ["-c", "pyproject.toml"]
+        files: ^src/.*\.py$
         additional_dependencies: ["bandit[toml]"]
 
-  - repo: https://github.com/pyupio/safety
-    rev: 2.3.0
-    hooks:
-      - id: safety
-        args: ["check", "--full-report"]
-
+  # Local hooks for custom checks
   - repo: local
     hooks:
-      - id: pip-audit
-        name: pip-audit
-        entry: pip-audit
+      - id: check-pii-data
+        name: Check for PII data patterns
+        entry: grep -r -E "(password|secret|key|token|ssn|credit.?card|social.?security)" --include="*.py" --include="*.json" --exclude-dir=".git" --exclude-dir="__pycache__" --exclude-dir=".venv" .
+        language: system
+        pass_filenames: false
+        always_run: true
+        # This will fail if it finds any of these patterns, helping with GDPR/HIPAA compliance
+        
+      - id: safety-check
+        name: Safety dependency check
+        entry: safety check
         language: system
         pass_filenames: false
         always_run: true 
