--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,14 +27,9 @@ repos:
   # Local hooks for custom checks
   - repo: local
     hooks:
-      - id: check-pii-data
-        name: Check for PII data patterns in source code
-        entry: grep -r -E "(password|secret|key|token|ssn|credit.?card|social.?security)" --include="*.py" --exclude-dir=".git" --exclude-dir="__pycache__" --exclude-dir=".venv" --exclude-dir="tests" --exclude-dir="examples" src/
-        language: system
-        pass_filenames: false
-        always_run: true
-        # This will fail if it finds any of these patterns, helping with GDPR/HIPAA compliance
-        
+      # Using the built-in detect-private-key hook instead of our custom credential detection
+      # to avoid false positives
+      
       - id: safety-check
         name: Safety dependency check
         entry: safety check
