--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -41,7 +41,7 @@ jobs:
         run: bandit -c pyproject.toml -r src/ -ll -v
 
       - name: Run Safety Check
-        run: safety check --full-report --output json > safety-report.json
+        run: safety check --json > safety-report.json
 
       - name: Run pip-audit
         run: pip-audit --desc --format json > pip-audit-report.json
@@ -109,14 +109,14 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+        uses: github/codeql-action/init@v3
         with:
           languages: python
           queries: security-extended,security-and-quality
           config-file: .github/codeql/codeql-config.yml
       
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
+        uses: github/codeql-action/analyze@v3
         with:
           category: "/language:python"
           upload: true
@@ -137,6 +137,7 @@ jobs:
           extra_args: --debug --only-verified
 
       - name: GitGuardian scan
+        if: ${{ env.GITGUARDIAN_API_KEY != '' }}
         uses: GitGuardian/ggshield-action@master
         env:
           GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
@@ -156,11 +157,11 @@ jobs:
         run: |
           echo "# Security Scan Results" > security-report.md
           echo "## SAST Results" >> security-report.md
-          cat semgrep-results.json >> security-report.md
+          cat semgrep-results.json >> security-report.md || echo "No semgrep results found" >> security-report.md
           echo "## Dependency Check Results" >> security-report.md
-          cat reports/dependency-check-report.json >> security-report.md
+          cat reports/dependency-check-report.json >> security-report.md || echo "No dependency check results found" >> security-report.md
           echo "## Safety Check Results" >> security-report.md
-          cat safety-report.json >> security-report.md
+          cat safety-report.json >> security-report.md || echo "No safety results found" >> security-report.md
 
       - name: Upload Security Report
         uses: actions/upload-artifact@v3
