fix: explicitly disable Snyk in security workflow
- Add a placeholder step for Snyk that just echoes a message\n- This should prevent the workflow from trying to run the actual Snyk command

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -59,6 +59,11 @@ jobs:
       - name: Run detect-secrets
         run: detect-secrets scan > secrets-scan.json
 
+      # Explicitly disable Snyk
+      - name: Run Snyk
+        run: echo "Snyk has been disabled in favor of open-source security tools"
+        continue-on-error: true
+
       # Software Composition Analysis (SCA)
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
