--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A monitoring tool for LLM API calls"
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
-keywords = ["llm", "monitoring", "api"]
+keywords = ["llm", "monitoring", "api", "sqlite", "database"]
 authors = [
     { name = "Cylest.io", email = "contact@cylest.io" }
 ]
@@ -19,10 +19,6 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.11",
     "Topic :: Software Development :: Libraries :: Python Modules",
-]
-
-packages = [
-    { include = "cylestio_monitor", from = "src" }
 ]
 
 dependencies = [
@@ -35,8 +31,13 @@ dependencies = [
     "pyyaml>=6.0.0",
 ]
 
+[project.urls]
+"Homepage" = "https://github.com/cylestio/cylestio-monitor"
+"Bug Tracker" = "https://github.com/cylestio/cylestio-monitor/issues"
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/cylestio_monitor"]
+include = ["src/cylestio_monitor/db"]
 
 [tool.hatch.build.targets.wheel.force-include]
 "src/cylestio_monitor/config/default_config.yaml" = "cylestio_monitor/config/default_config.yaml"
