--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,12 @@
 site_name: Cylestio Monitor
-site_description: A lightweight, drop-in monitoring SDK for AI agents, MCP, and LLM API calls
-site_author: Cylest.io
-site_url: https://cylestio.github.io/cylestio-monitor/
-repo_name: cylestio/cylestio-monitor
-repo_url: https://github.com/cylestio/cylestio-monitor
-copyright: Copyright &copy; 2024 Cylest.io
+site_description: Monitoring and security for AI agents
+site_author: Cylestio
+copyright: Copyright &copy; 2024 Cylestio
 
 theme:
   name: material
+  icon:
+    logo: material/shield-check
   palette:
     # Light mode
     - media: "(prefers-color-scheme: light)"
@@ -26,45 +25,33 @@ theme:
         icon: material/brightness-4
         name: Switch to light mode
   features:
-    - navigation.instant
     - navigation.tabs
     - navigation.sections
     - navigation.top
     - search.highlight
+    - search.suggest
     - content.code.copy
-  icon:
-    repo: fontawesome/brands/github
-  logo: assets/logo.png
-  favicon: assets/favicon.ico
+
+extra_css:
+  - stylesheets/extra.css
 
 markdown_extensions:
   - admonition
   - attr_list
-  - pymdownx.highlight
+  - pymdownx.details
   - pymdownx.superfences
-  - pymdownx.tabbed
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.tabbed:
+      alternate_style: true
   - tables
   - toc:
       permalink: true
 
 plugins:
   - search
-  - mkdocstrings:
-      handlers:
-        python:
-          paths: [src]
-          options:
-            docstring_style: google
-            show_source: false
-
-extra:
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/cylestio
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/cylestio
-  version:
-    provider: mike
 
 nav:
   - Home: index.md
@@ -74,7 +61,7 @@ nav:
     - Configuration: getting-started/configuration.md
   - User Guide:
     - Overview: user-guide/overview.md
-    - Monitoring LLM Calls: user-guide/monitoring-llm.md
+    - Monitoring LLM: user-guide/monitoring-llm.md
     - Monitoring MCP: user-guide/monitoring-mcp.md
     - Security Features: user-guide/security-features.md
     - Logging Options: user-guide/logging-options.md
@@ -84,6 +71,10 @@ nav:
     - Events Processor: api-reference/events-processor.md
     - Events Listener: api-reference/events-listener.md
     - Database: api-reference/database.md
-  - Development:
-    - Contributing: development/contributing.md
-    - Changelog: development/changelog.md 
+  - Advanced Topics:
+    - Monitoring Channels: advanced-topics/monitoring-channels.md
+    - Custom Integrations: advanced-topics/custom-integrations.md
+    - Performance: advanced-topics/performance.md
+  - Best Practices:
+    - Security: best-practices/security.md
+    - Monitoring: best-practices/monitoring.md 
