--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material
+          pip install pymdown-extensions
+          pip install "mkdocstrings[python]"
           pip install -e .
       
       - name: Configure Git user
@@ -38,6 +40,15 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
       
+      - name: Create .nojekyll file
+        run: |
+          touch ./docs/.nojekyll
+      
       - name: Deploy documentation
         run: |
-          mkdocs gh-deploy --force 
+          mkdocs gh-deploy --force
+          
+      - name: Verify deployment
+        run: |
+          echo "Documentation deployed to GitHub Pages"
+          echo "If the documentation is not visible, please check the GitHub Pages settings in the repository" 
