fix: Clean gh-pages branch before deployment to ensure proper documentation structure

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -44,6 +44,13 @@ jobs:
         run: |
           touch ./docs/.nojekyll
       
+      - name: Clean gh-pages branch if it exists
+        run: |
+          if git ls-remote --heads origin gh-pages | grep gh-pages; then
+            git branch -D gh-pages || true
+            git push origin --delete gh-pages || true
+          fi
+      
       - name: Deploy documentation
         run: |
           mkdocs gh-deploy --force
