--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,8 +62,11 @@ plugins:
           options:
             show_source: true
 
-# Use the gh-pages branch for GitHub Pages
+# GitHub Pages Configuration
 use_directory_urls: true
+
+# Explicitly set the docs_dir to ensure correct file paths
+docs_dir: docs
 
 nav:
   - Home: index.md
