--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,8 +33,7 @@ jobs:
         
     - name: Verify package metadata
       run: |
-        pip install tomli
-        python -c "import tomli; config = tomli.loads(open('pyproject.toml', 'rb').read()); assert config['project']['name'] == 'cylestio-monitor', 'Package name mismatch'; assert config['project']['version'], 'Version not set'; assert config['project']['description'], 'Description not set'; assert config['project']['readme'], 'README not set'; assert config['project']['license'], 'License not set'; assert config['project']['authors'], 'Authors not set'; print('Package metadata verification passed')"
+        python -c "import tomllib; config = tomllib.loads(open('pyproject.toml', 'rb').read()); assert config['project']['name'] == 'cylestio-monitor', 'Package name mismatch'; assert config['project']['version'], 'Version not set'; assert config['project']['description'], 'Description not set'; assert config['project']['readme'], 'README not set'; assert config['project']['license'], 'License not set'; assert config['project']['authors'], 'Authors not set'; print('Package metadata verification passed')"
         
     - name: Build package
       run: python -m build
