--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,13 @@ jobs:
         bandit -r src/
         safety check
         
+    - name: Verify package metadata
+      run: |
+        # Install tomli for compatibility
+        pip install tomli
+        # Verify package metadata
+        python -c "import tomli; config = tomli.loads(open('pyproject.toml', 'rb').read()); assert config['project']['name'] == 'cylestio-monitor', 'Package name mismatch'; assert config['project']['version'], 'Version not set'; assert config['project']['description'], 'Description not set'; assert config['project']['readme'], 'README not set'; assert config['project']['license'], 'License not set'; assert config['project']['authors'], 'Authors not set'; print('Package metadata verification passed')"
+        
     - name: Build package
       run: python -m build
       
