docs: update MCP references to properly describe Model Context Protocol and remove Material for MkDocs footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,8 @@ theme:
     - search.highlight
     - search.suggest
     - content.code.copy
+  # Remove "Made with Material for MkDocs" footer
+  generator: false
 
 extra_css:
   - stylesheets/extra.css
