chore: update gitignore to exclude output and database files
- Added patterns to exclude output files and directories\n- Added patterns to exclude database files like chroma.sqlite3\n- Added patterns to exclude monitoring JSON logs

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,17 @@ site/
 *.sqlite
 *.db
 *.rdb
+*.sqlite3
+*chroma.sqlite3
+*chroma_db/
+
+# Output directories and files
+**/output/
+output/
+**/logs/
+*_logs.json
+*_monitoring.json
+*monitoring*.json
 
 # OS specific
 .DS_Store
