--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "structlog>=24.1.0",
     "platformdirs>=4.0.0",
     "pyyaml>=6.0.0",
+    "sqlalchemy>=2.0.0",
     "tomli; python_version < '3.11'",
 ]
 
