--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A monitoring tool for LLM API calls"
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
-keywords = ["llm", "monitoring", "api", "sqlite", "database", "security", "compliance"]
+keywords = ["llm", "monitoring", "api", "security", "compliance"]
 authors = [
     { name = "Cylestio.com", email = "contact@Cylestio.com" }
 ]
@@ -31,7 +31,7 @@ dependencies = [
     "structlog>=24.1.0",
     "platformdirs>=4.0.0",
     "pyyaml>=6.0.0",
-    "sqlalchemy>=2.0.0",
+    "requests>=2.31.0",
     "tomli; python_version < '3.11'",
 ]
 
@@ -44,7 +44,6 @@ dependencies = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/cylestio_monitor"]
-include = ["src/cylestio_monitor/db"]
 
 [tool.hatch.build.targets.wheel.force-include]
 "src/cylestio_monitor/config/default_config.yaml" = "cylestio_monitor/config/default_config.yaml"
