--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "pyyaml>=6.0.0",
     "requests>=2.31.0",
     "tomli; python_version < '3.11'",
+    "langchain>=0.1.0",
+    "langchain-core>=0.1.0",
 ]
 
 [project.urls]
