--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e ".[dev,test]"
         pip install pytest-cov pytest-asyncio bandit safety
+        pip install langchain>=0.1.0 langchain-core>=0.1.0
         
     - name: Run linters and formatters
       run: |
