fix: more robust handling of missing dependencies in tests

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
+minversion = 8.0
+addopts = -ra -q
+testpaths = tests
+python_files = test_*.py
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests (deselect with '-m "not integration"')
@@ -6,6 +10,8 @@ markers =
     non_critical: marks tests as non-critical (deselect with '-m "not non_critical"')
     asyncio: marks tests as asyncio tests
     security: marks tests as security tests (deselect with '-m "not security"')
+    requires_db: marks tests that require database functionality
+    requires_langchain: marks tests that require langchain to be properly installed
 
 # Disable warnings we know about but won't fix for MVP
 filterwarnings =
